--- a/Burrows_Bay_Octopus.Rmd
+++ b/Burrows_Bay_Octopus.Rmd
@@ -6,7 +6,7 @@ output: pdf_document
 ---
 
 # Libraries
-```{r}
+```{r Libraries, message=FALSE, warning=FALSE}
 library(ape)
 library(xlsx)
 library(insect)
@@ -18,6 +18,7 @@ library(rwty)
 library(stringi)
 library(Biostrings)
 library(dplyr)
+library(knitr)
 ```
 
 
@@ -294,12 +295,33 @@ coiii.pd=as.phyDat(coiii.final[!is.na(access$COIII)])
 ```
 
 ```{r}
-coiii.mT=modelTest(coiii.pd,coiii.nj)
-coiii.mT=coiii.mT[order(coiii.mT$AICc),]
-coiii.mT$Model[1]
-mt[3]=coiii.mT$Model[1]
+coiii.length=length(coiii$Octopus_vulgaris)
 ```
 
+
+COIII codon position 1
+```{r}
+coiii.1.mT=modelTest(coiii.pd[,seq(from=1,to=coiii.length,by=3)],coiii.nj)
+coiii.1.mT=coiii.1.mT[order(coiii.1.mT$AICc),]
+coiii.1.mT$Model[1]
+mt[3]=coiii.1.mT$Model[1]
+```
+
+COIII codon position 2
+```{r}
+coiii.2.mT=modelTest(coiii.pd[,seq(from=2,to=coiii.length,by=3)],coiii.nj)
+coiii.2.mT=coiii.2.mT[order(coiii.2.mT$AICc),]
+coiii.2.mT$Model[1]
+mt[4]=coiii.2.mT$Model[1]
+```
+
+COIII codon position 3
+```{r}
+coiii.3.mT=modelTest(coiii.pd[,seq(from=3,to=coiii.length,by=3)],coiii.nj)
+coiii.3.mT=coiii.3.mT[order(coiii.3.mT$AICc),]
+coiii.3.mT$Model[1]
+mt[5]=coiii.3.mT$Model[1]
+```
 
 # Cytb
 
@@ -362,13 +384,40 @@ cytb.pd=as.phyDat(cytb.final[!is.na(access$Cytb)])
 
 
 ```{r}
-cytb.mT=modelTest(cytb.pd,cytb.nj)
-cytb.mT=cytb.mT[order(cytb.mT$AICc),]
-cytb.mT$Model[1]
-mt[4]=cytb.mT$Model[1]
+cytb.length=length(cytb$Octopus_vulgaris)
 ```
 
 
+
+Cytb codon position 1
+```{r}
+cytb.1.mT=modelTest(cytb.pd[,seq(from=1,to=cytb.length,by=3)],cytb.nj)
+cytb.1.mT=cytb.1.mT[order(cytb.1.mT$AICc),]
+cytb.1.mT$Model[1]
+mt[6]=cytb.1.mT$Model[1]
+```
+
+Cytb codon postion 2
+```{r}
+cytb.2.mT=modelTest(cytb.pd[,seq(from=2,to=cytb.length,by=3)],cytb.nj)
+cytb.2.mT=cytb.2.mT[order(cytb.2.mT$AICc),]
+cytb.2.mT$Model[1]
+mt[7]=cytb.2.mT$Model[1]
+```
+
+Cytb codon postion 3
+```{r}
+cytb.3.mT=modelTest(cytb.pd[,seq(from=3,to=cytb.length,by=3)],cytb.nj)
+cytb.3.mT=cytb.3.mT[order(cytb.3.mT$AICc),]
+cytb.3.mT$Model[1]
+mt[8]=cytb.3.mT$Model[1]
+```
+
+## Models Selected
+```{r}
+kable(data.frame(partition=c("12s stems","12s loops","COXIII pos 1","COXIII pos 2","COXIII pos 3",
+                            "CytB pos 1","CytB pos 2","CytB pos 3"),model=mt))
+```
 
 ## Combining data together.
 
@@ -424,18 +473,30 @@ Writing length variable lines
 write.table(paste("  DIMENSIONS NTAX=",nrow(access)," NCHAR=",total.len,";",sep=""),"dimensions",
             row.names = F,col.names = F,quote = F)
 
-write.table(paste("      charset coiii =  ",coiii.start," - ",cytb.start-1,";",sep=""),"charset.coii",
+write.table(data.frame(models=c(
+            paste("      charset coiii_pos1 =  ",coiii.start," - ",cytb.start-1,"\\3;",sep=""),
+            paste("      charset coiii_pos2 =  ",coiii.start+1," - ",cytb.start-1,"\\3;",sep=""),
+            paste("      charset coiii_pos3 =  ",coiii.start+2," - ",cytb.start-1,"\\3;",sep="")
+            )),
+            "charset.coii",
             row.names = F,col.names = F,quote = F)
 
-write.table(paste("      charset cytb =  ",cytb.start," - ",total.len,";",sep=""),"charset.cytb",
+write.table(data.frame(models=c(
+            paste("      charset cytb_pos1 =  ",cytb.start," - ",total.len,"\\3;",sep=""),
+            paste("      charset cytb_pos2 =  ",cytb.start+1," - ",total.len,"\\3;",sep=""),
+            paste("      charset cytb_pos3 =  ",cytb.start+2," - ",total.len,"\\3;",sep="")
+            )),
+            "charset.cytb",
             row.names = F,col.names = F,quote = F)
 
 ```
 
+
 # Generating nexus file with MrBayes command block. 
 ```{bash, eval=F}
 rm complete.nxs #just cleaning out previous iteration if running multiple times
-rm -r mb 
+cp -r mb mb.backup
+rm -r mb
 touch complete.nxs
 echo "#NEXUS" >> complete.nxs
 echo "BEGIN DATA;" >> complete.nxs
@@ -462,26 +523,30 @@ cat stems12s | sed '1s/^/    	charset  12s-stems = /' | sed -E 's/$/;/g' | sed -
 echo " " >> complete.nxs
 cat loops12s | sed '1s/^/    	charset  12s-loops = /' | sed -E 's/$/;/g' | sed -r 's/(.{73,76} )/\1\n           /g' | sed '1s/^/\n/' >> complete.nxs
 echo " " >> complete.nxs
-sed -n 1p charset.coii >> complete.nxs
-sed -n 1p charset.cytb >> complete.nxs
+sed -n 1,3p charset.coii >> complete.nxs
+sed -n 1,3p charset.cytb >> complete.nxs
 #echo "	    charset coiii =  479 - 1118;" >> complete.nxs
 #echo "	    charset cytb =  1119 - 1725;" >> complete.nxs
 echo " " >> complete.nxs
-echo "      partition parts = 4:12s-stems,12s-loops,coiii,cytb;" >> complete.nxs
-echo "	    set partition = parts;
-
-	    lset applyto=(1)   nucmodel=doublet;
-	    lset applyto=(2,3,4)   nucmodel=4by4;
+echo "      partition by_gene = 8:12s-stems,12s-loops,coiii_pos1,coiii_pos2,coiii_pos3,cytb_pos1,cytb_pos2,cytb_pos3;" >> complete.nxs
+echo "	    set partition = by_gene;
+" >> complete.nxs
+echo "	    constraint outg = Octopus_vulgaris Octopus_rubescens Octopus_bimaculoides Octopus_cyanea Amphioctopus_aegina Hapalochlaena_maculosa Abdopus_aculeatus Octopus_tetricus Octopus_berrima Macroctopus_maorum;
+	    prset topologypr = constraints (outg);
+	    outgroup Octopus_vulgaris;
+	    " >> complete.nxs
+echo "	    lset applyto=(1)   nucmodel=doublet;
+	    lset applyto=(2,3,4,6,7,8)   nucmodel=4by4;
 	    prset ratepr=variable;
-	" >> complete.nxs
+	    unlink statefreq=(all) revmat=(all) shape=(all) pinvar=(all);" >> complete.nxs
 
 cat models_to_write >> complete.nxs
 
 echo "
-     mcmcp ngen=100000000 printfreq=1000 samplefreq=10000 stoprule=yes stopval=0.01 nruns=5 nchains=2 burninfrac=0.25;
-     mcmc;
-     sump;
-     sumt filename=mb/complete.nxs contype=allcompat conformat=simple;
+      mcmcp ngen=100000000 printfreq=1000 samplefreq=10000 stoprule=yes stopval=0.01 nruns=5 nchains=2 burninfrac=0.25;
+      mcmc;
+      sump;
+      sumt filename=mb/complete.nxs contype=allcompat conformat=simple;
 
 end;
 " >> complete.nxs
